<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    <EditText
            android:hint="@string/enter_string_to_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:id="@+id/edtToStore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/decrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/edtToStore"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtToStore"/>

    <TextView
            android:id="@+id/tvDecrypted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/encrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/edtToStore"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
            android:id="@+id/tvEncrypted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <EditText
            android:hint="@string/enter_number_to_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/edtNumberToStore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEncrypted"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveNumber"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtNumberToStore"
            app:layout_constraintBottom_toBottomOf="@+id/edtNumberToStore" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/decrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/edtToStore"
            app:layout_constraintTop_toBottomOf="@+id/edtNumberToStore" android:layout_marginTop="8dp"
            android:id="@+id/textView4"/>

    <TextView
            android:id="@+id/tvDecryptedNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/encrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/edtToStore"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:id="@+id/textView3"/>

    <TextView
            android:id="@+id/tvEncryptedNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEncryptedNumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
